--- a/PDMWebService/App.config
+++ b/PDMWebService/App.config
@@ -80,6 +80,12 @@
             <setting name="XMLPath" serializeAs="String">
                 <value>\\pdmsrv\XML</value>
             </setting>
+            <setting name="DefaultFolderForDxf" serializeAs="String">
+                <value>C:\DXF\</value>
+            </setting>
+            <setting name="DefaultPathToBuildPdf" serializeAs="String">
+                <value>C:\PDF\</value>
+            </setting>
         </PDMWebService.Properties.Settings>
     </userSettings>
 </configuration>
