refactoring, create iPdmAdapter, fixed bugs in pdf builder

--- a/PDMWebService/App.config
+++ b/PDMWebService/App.config
@@ -81,10 +81,13 @@
                 <value>\\pdmsrv\XML</value>
             </setting>
             <setting name="DefaultFolderForDxf" serializeAs="String">
-                <value>C:\DXF\</value>
+                <value>D:\TEMP\DXF\</value>
             </setting>
-            <setting name="DefaultPathToBuildPdf" serializeAs="String">
-                <value>C:\PDF\</value>
+            <setting name="PdfFolder" serializeAs="String">
+                <value>D:\TEMP\PDF</value>
+            </setting>
+            <setting name="TempPdfFolder" serializeAs="String">
+                <value>D:\TEMP\TEMP PDF</value>
             </setting>
         </PDMWebService.Properties.Settings>
     </userSettings>
