--- a/ServiceLibrary/ServiceLibrary.csproj
+++ b/ServiceLibrary/ServiceLibrary.csproj
@@ -53,7 +53,9 @@
     <Compile Include="DataContracts\BomShell.cs" />
     <Compile Include="DataContracts\DataModel.cs" />
     <Compile Include="DataContracts\Specification.cs" />
+    <Compile Include="DataContracts\TaskData.cs" />
     <Compile Include="DataContracts\TransmittableFile.cs" />
+    <Compile Include="IMonitorTaskSystem.cs" />
     <Compile Include="ISolidWebService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskSysrtem\Constants\Constants.cs" />
