--- a/ServiceConstants/ServiceConstants.csproj
+++ b/ServiceConstants/ServiceConstants.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BA6001DC-7302-475C-95DA-1E73B30E09CF}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{21A48C37-403D-4966-9414-6EA2327A204B}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestWebService</RootNamespace>
-    <AssemblyName>TestWebService</AssemblyName>
+    <RootNamespace>ServiceConstants</RootNamespace>
+    <AssemblyName>ServiceConstants</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,22 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestDataBaseDomian\Test_TaskSystemReposytory.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DataBaseDomian\DataBaseDomian.csproj">
-      <Project>{6ac06b1c-66f2-40e5-9b11-cbfa56b747b6}</Project>
-      <Name>DataBaseDomian</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MessageLibrary\Patterns.csproj">
-      <Project>{d0abf979-d32b-453d-92d5-f9bc7bdec44e}</Project>
-      <Name>Patterns</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
