--- a/ServiceHost/ServiceHost.csproj
+++ b/ServiceHost/ServiceHost.csproj
@@ -6,17 +6,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{72339207-CA2E-4581-BA9C-8E6A6A1052A6}</ProjectGuid>
+    <ProjectGuid>{C8B423A1-369E-42CF-BB71-1D6AE07B5064}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ServiceLibrary</RootNamespace>
-    <AssemblyName>ServiceLibrary</AssemblyName>
+    <RootNamespace>ServiceHost</RootNamespace>
+    <AssemblyName>ServiceHost</AssemblyName>
     <ProjectTypeGuids>{3D9AD99F-2412-4246-B90B-4EAA41C64699};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <StartArguments>/client:"WcfTestClient.exe"</StartArguments>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
     <XsdCodeGenEnabled>True</XsdCodeGenEnabled>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,10 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bullzip.PdfWriter, Version=4.0.0.0, Culture=neutral, PublicKeyToken=041d71cacb6e853c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\TaskSystemLibrary\bin\Release\Bullzip.PdfWriter.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,48 +45,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConcreteService\VetsManagingWebService.cs" />
-    <Compile Include="Models\DataContracts\TransmittableFileModel.cs" />
-    <Compile Include="Models\DataContracts\TransmittableSpecification.cs" />
-    <Compile Include="Models\DataContracts\TransmittableTaskData.cs" />
-    <Compile Include="Models\DataContracts\TransmittableFile.cs" />
-    <Compile Include="Models\DataConverter.cs" />
-    <Compile Include="ServiceInterface\ISolidWebService.cs" />
+    <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service1.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DataBaseDomian\DataBaseDomian.csproj">
-      <Project>{6ac06b1c-66f2-40e5-9b11-cbfa56b747b6}</Project>
-      <Name>DataBaseDomian</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MessageLibrary\Patterns.csproj">
-      <Project>{d0abf979-d32b-453d-92d5-f9bc7bdec44e}</Project>
-      <Name>Patterns</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PdmSolidWorksLibrary\PdmSolidWorksLibrary.csproj">
-      <Project>{796ce95a-9827-4090-a509-039b84cb601f}</Project>
-      <Name>PdmSolidWorksLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ServiceConstants\ServiceConstants.csproj">
-      <Project>{21a48c37-403d-4966-9414-6ea2327a204b}</Project>
-      <Name>ServiceConstants</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SolidWorksLivrary\SolidWorksLibrary.csproj">
-      <Project>{decc61e0-8d25-485f-99f4-d895177c7997}</Project>
-      <Name>SolidWorksLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TaskSystemLibrary\TaskSystemLibrary.csproj">
-      <Project>{44eacab1-6578-4b6a-b743-28d9899a8da4}</Project>
-      <Name>TaskSystemLibrary</Name>
-    </ProjectReference>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
