configurated clonsole host web service, refactoring

--- a/ConsoleServiceHost/App.config
+++ b/ConsoleServiceHost/App.config
@@ -1,85 +1,30 @@
-﻿ <?xml version="1.0" encoding="utf-8" ?>
-<!--<configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+  <system.serviceModel>
+    <behaviors>
 
-
-  --><!--<system.serviceModel>
-    <services>
-      <service name="ServiceLibrary.ConcreteService.VetsManagingWebService"> --><!--behaviorConfiguration="mexBehavior">--><!--
-        
-        <endpoint address="VetsManagingWebService" binding="netTcpBinding" contract="ServiceLibrary.ServiceInterface.ISolidWebService"></endpoint>
-        --><!--<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"></endpoint>--><!--
-
-        <host>
-          <baseAddresses>
-            <add baseAddress="net.tcp://192.168.14.43:8080/"/>
-          </baseAddresses>
-        </host>
-        
-      </service>
-    </services>
-
-    --><!--<behaviors>
       <serviceBehaviors>
-        <behavior name="mexBehavior">
-          <serviceMetadata httpGetEnabled="True" />
+        <behavior name="mexBehaviour">
+          <serviceMetadata httpGetEnabled="true" />
         </behavior>
       </serviceBehaviors>
-    </behaviors>--><!--
-    
-  </system.serviceModel>--><!--
-</configuration>-->
 
+    </behaviors>
+    <services>
+      <service behaviorConfiguration="mexBehaviour" name="ServiceLibrary.ConcreteService.VentsManagingWebService">
+        <endpoint address="VentsManagingWebService" binding="basicHttpBinding" contract="ServiceLibrary.ServiceInterface.ISolidWebService" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://192.168.14.86:3535/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+  </system.serviceModel>
 
-
-<configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  
-  <!-- When deploying the service library project, the content of the config file must be added to the host's 
-  app.config file. System.Configuration does not support config files for libraries. -->
-  <system.serviceModel>
-    <services>
-      <service name="ServiceLibrary.ConcreteService.VetsManagingWebService">
-        <host>
-          <baseAddresses>
-            <add baseAddress = "http://192.168.14.43:8080/"/>
-          </baseAddresses>
-        </host>
-        <!-- Service Endpoints -->
-        <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="VetsManagingWebService" binding="basicHttpBinding" contract="ServiceLibrary.ServiceInterface.ISolidWebService">
-          <!-- 
-              Upon deployment, the following identity element should be removed or replaced to reflect the 
-              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
-              automatically.
-          -->
-          <!--<identity>
-            <dns value="localhost"/>
-          </identity>-->
-        </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
-        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-      </service>
-    </services>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, 
-          set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
-          <!-- To receive exception details in faults for debugging purposes, 
-          set the value below to true.  Set to false before deployment 
-          to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
-  </system.serviceModel>
-
 </configuration>
+
