--- a/ServiceLibrary/ServiceLibrary.csproj
+++ b/ServiceLibrary/ServiceLibrary.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConcreteService\VetsManagingWebService.cs" />
+    <Compile Include="ConcreteService\VentsManagingWebService.cs" />
     <Compile Include="Models\DataContracts\TransmittableFileModel.cs" />
     <Compile Include="Models\DataContracts\TransmittableSpecification.cs" />
     <Compile Include="Models\DataContracts\TransmittableTaskData.cs" />
