--- a/ServiceLibrary/ServiceLibrary.csproj
+++ b/ServiceLibrary/ServiceLibrary.csproj
@@ -84,7 +84,7 @@
       <Project>{21a48c37-403d-4966-9414-6ea2327a204b}</Project>
       <Name>ServiceConstants</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SolidWorksLivrary\SolidWorksLibrary.csproj">
+    <ProjectReference Include="..\SolidWorksLibrary\SolidWorksLibrary.csproj">
       <Project>{decc61e0-8d25-485f-99f4-d895177c7997}</Project>
       <Name>SolidWorksLibrary</Name>
     </ProjectReference>
@@ -92,6 +92,17 @@
       <Project>{44eacab1-6578-4b6a-b743-28d9899a8da4}</Project>
       <Name>TaskSystemLibrary</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="stdole">
+      <Guid>{00020430-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
