--- a/SolidWorksLibrary/SolidWorksLibrary.csproj
+++ b/SolidWorksLibrary/SolidWorksLibrary.csproj
@@ -76,13 +76,17 @@
     <Compile Include="Builders\Dxf\DataToExport.cs" />
     <Compile Include="Builders\Dxf\DxfBulder.cs" />
     <Compile Include="Builders\Dxf\DxfFile.cs" />
-    <Compile Include="Builders\Parts\AbstractBuilder.cs" />
-    <Compile Include="Builders\Parts\Flap\FlapBuilder.cs" />
-    <Compile Include="Builders\Parts\IFeedbackBuilder.cs" />
-    <Compile Include="Builders\Parts\MountingFrame\MountingFrameBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\AbstractBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\FlapBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\FramelessPanelsBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\FramePanelsBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\IFeedbackBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\MountingFrameBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\FrameCaseBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\PanelBuilder.cs" />
     <Compile Include="Builders\Pdf\PdfBuilder.cs" />
-    <Compile Include="Builders\Parts\Roof\RoofBuilder.cs" />
-    <Compile Include="Builders\Parts\Spigot\SpigotBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\RoofBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\SpigotBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolidWorksAdapter.cs" />
   </ItemGroup>
