--- a/SolidWorksLibrary/SolidWorksLibrary.csproj
+++ b/SolidWorksLibrary/SolidWorksLibrary.csproj
@@ -85,7 +85,10 @@
     <Compile Include="Builders\Case\MonoBlockBuilder.cs" />
     <Compile Include="Builders\ElementsCase\MountingFrameBuilder.cs" />
     <Compile Include="Builders\ElementsCase\Panels\FrameCaseBuilder.cs" />
-    <Compile Include="Builders\ElementsCase\Panels\FramelessPartBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\FramelessPartBuilder.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\InputHolesWrapper.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\OutputHolesWrapper.cs" />
+    <Compile Include="Builders\ElementsCase\Panels\Frameless\ValProfils.cs" />
     <Compile Include="Builders\ElementsCase\Panels\PanelBuilder.cs" />
     <Compile Include="Builders\ElementsCase\Vector.cs" />
     <Compile Include="Builders\Pdf\PdfBuilder.cs" />
